--- a/Client/package.json
+++ b/Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pet-adopton",
+  "name": "campus-by",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,6 +25,7 @@
     "https-browserify": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
+    "leaflet": "^1.9.4",
     "loadjs": "^4.3.0-rc1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.469.0",
@@ -38,8 +39,8 @@
     "react-dropzone": "^14.3.5",
     "react-file-base64": "^1.0.3",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.3",
-    "react-pinky-promise": "^1.0.3",
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
